--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,21 @@
         android:theme="@style/Theme.AttendenceSystemUser"
         tools:targetApi="31">
         <activity
-            android:name=".TeachersScreen"
+            android:name=".Subjects"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Batches"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Teachers"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -43,7 +57,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".StudentScreen"
+            android:name=".Students"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
