added partial attendence

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,49 +13,48 @@
         android:theme="@style/Theme.AttendenceSystemUser"
         tools:targetApi="31">
         <activity
-            android:name=".admin.AddBatches"
-            android:label="ADD BATCH"
+            android:name=".Attendence"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".admin.AddBatches"
+            android:exported="false"
+            android:label="ADD BATCH">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".admin.AddSubjects"
-            android:label="ADD SUBJECT"
-            android:exported="false">
+            android:exported="false"
+            android:label="ADD SUBJECT">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".Screens.Subjects"
-            android:label="SUBJECTS"
-            android:exported="false">
+            android:exported="false"
+            android:label="SUBJECTS">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".Screens.Batches"
-            android:label="BATCHES"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".Screens.Teachers"
-            android:label="TEACHERS"
-            android:exported="false">
+            android:exported="false"
+            android:label="BATCHES">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".admin.RegisterTeacher"
-            android:label="ADD TEACHER"
-            android:exported="false">
+            android:exported="false"
+            android:label="ADD TEACHER">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -69,33 +68,25 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".TeacherMainscreen"
-            android:exported="false"
-            android:label="TEACHER PORTAL">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".Screens.Students"
-            android:label="STUDENTS"
-            android:exported="false">
+            android:exported="false"
+            android:label="STUDENTS">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".admin.RegisterStudent"
-            android:label="REGISTER STUDENT"
-            android:exported="false">
+            android:exported="false"
+            android:label="REGISTER STUDENT">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Screens.Teachers"
             android:exported="false"
-            android:label="ADMIN PORTAL">
+            android:label="Teachers">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -109,7 +100,23 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".TeacherMainscreen"
+            android:exported="false"
+            android:label="Teacher Portal">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".AdminMainscreen"
+            android:exported="false"
+            android:label="Admin Portal">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
             android:label="Biometric Attendance BS(CS) GDCL">
             <intent-filter>
